# yourcase

./: .gitignore  Cargo.toml  README.md  index.html  styles.css  tailwind.config.js  test.db
.VSCodeCounter/2023-05-18_19-38-43/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
migrations/2023-05-10-192640_initial/: down.sql  up.sql
migrations/2023-05-10-194925_rename/: down.sql  up.sql
migrations/2023-05-18-181822_not_null_primary/: down.sql  up.sql
src/: components.rs  lib.rs  main.rs  tauri.rs
src-tauri/: Cargo.toml  tauri.conf.json  test.db
src-tauri/src/: commands.rs  database.rs  lib.rs  main.rs
src-tauri/src/database/: models.rs  schema.rs
src/components/: db_management.rs  form.rs  input_field.rs  values.rs
